# tournament-bracket

./: CMakeLists.txt  README.md
include/: Player.h  Round.h  Tournament.h
src/: Round.cpp  Tournament.cpp  main.cpp
